tests/Schema/expected
[<("name", String), ("age", Nat), ("favorite color", String)]

[<"name", "age", "favorite color"]
[<String, Nat, String]

[<("name", String), ("favorite color", String)]
[<("name", String), ("age", Nat)]
Error: Can't find an implementation for HasField [<("name", String), ("age", Nat), ("favorite color", String)] "grade" ?sa.

(Interactive):1:5--1:31
 1 |     drop "grade" exampleSchema
         ^^^^^^^^^^^^^^^^^^^^^^^^^^


